--- a/src/enigma.net.csproj
+++ b/src/enigma.net.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageId>enigma.net</PackageId>
     <Version>0.0.1</Version>
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="ImpromptuInterface" Version="7.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="qlik-engineapi" Version="0.1.0-alpha0052" />
   </ItemGroup>
 
 </Project>
