--- a/examples/SenseDesktop/SenseDesktop.csproj
+++ b/examples/SenseDesktop/SenseDesktop.csproj
@@ -12,6 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\enigma.net.csproj" />
+    <ProjectReference Include="..\..\src\enigma.net.csproj" />
   </ItemGroup>
 </Project>
