* add nlog * cleanup and rework
Signed-off-by: Konrad Mattheis <konrad.mattheis@akquinet.de>

--- a/examples/SenseDesktop/SenseDesktop.csproj
+++ b/examples/SenseDesktop/SenseDesktop.csproj
@@ -14,4 +14,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\enigma.net.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="App.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
