--- a/examples/SenseDesktop/SenseDesktop.csproj
+++ b/examples/SenseDesktop/SenseDesktop.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFrameworks>net452;netcoreapp2.1;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
