Add Namespace System.Web for url encoding. Add helper class SenseUtilities.

--- a/src/enigma.net.csproj
+++ b/src/enigma.net.csproj
@@ -62,6 +62,10 @@
     <PackageReference Include="GitVersionTask" Version="4.0.0-beta0008">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
+  </ItemGroup>  
+
+  <ItemGroup>
+    <Reference Include="System.Web" />
   </ItemGroup>
 
 </Project>
