break the JToken parameter calls parameter name have to be added, fix the examples

--- a/examples/SenseDesktop/App.config
+++ b/examples/SenseDesktop/App.config
@@ -18,7 +18,7 @@
     <rules>
       <!-- add your logging rules here -->
       <!--<logger name="*" minlevel="Error" writeTo="ASFile"/>-->
-      <logger name="*" minlevel="Info" writeTo="Console"/>
+      <logger name="*" minlevel="Trace" writeTo="Console"/>
     </rules>
   </nlog>
 </configuration>
