--- a/examples/SenseDesktop/SenseDesktop.csproj
+++ b/examples/SenseDesktop/SenseDesktop.csproj
@@ -1,8 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <Choose>
+    <When Condition="'$(MSBuildRuntimeType)' == 'Core'">
+      <PropertyGroup>
+        <TargetFramework>netcoreapp2.1</TargetFramework>
+      </PropertyGroup>
+    </When>
+    <Otherwise>
+      <PropertyGroup>
+        <TargetFrameworks>net452;netcoreapp2.1;netcoreapp2.0</TargetFrameworks>
+      </PropertyGroup>
+    </Otherwise>
+  </Choose>
+  
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFrameworks>net452;netcoreapp2.1;netcoreapp2.0</TargetFrameworks>
+    <OutputType>Exe</OutputType>   
   </PropertyGroup>
 
   <ItemGroup>
