--- a/src/enigma.net.csproj
+++ b/src/enigma.net.csproj
@@ -1,7 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>    
-    <TargetFrameworks>net452;netcoreapp2.1;netcoreapp2.0</TargetFrameworks>        
-
+  <Choose>
+    <When Condition="'$(MSBuildRuntimeType)' == 'Core'">
+      <PropertyGroup>
+        <TargetFramework>netcoreapp2.1</TargetFramework>
+      </PropertyGroup>
+    </When>
+    <Otherwise>
+      <PropertyGroup>
+        <TargetFrameworks>net452;netcoreapp2.1;netcoreapp2.0</TargetFrameworks>
+      </PropertyGroup>
+    </Otherwise>
+  </Choose>
+  
+  <PropertyGroup>           
     <PackageId>enigma.net</PackageId>    
     <Company>q2g</Company>
     <Product>enigma.net</Product>
