--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: csharp
 mono: none
 dotnet: 2.1.4
 script:
+  - dotnet --info
   - dotnet restore ./examples/SenseDesktop
   - dotnet build ./examples/SenseDesktop
