--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,4 @@ script:
   - dotnet --info
   - dotnet restore ./examples/SenseDesktop
   - dotnet build ./examples/SenseDesktop
+  - dotnet run ./examples/SenseDesktop/bin/Release/netcoreapp2.1/SenseDesktop.dll
