--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: csharp
 mono: none
 dotnet: 2.1
+
+services:
+  - docker
+
+before_install:
+- docker pull qlikcore/engine:12.300.0
+- docker run -d -p 127.0.0.1:9076:4848 qlikcore/engine -S AcceptEULA=yes
+- docker ps -a
+
 script:
   - dotnet --info
   - dotnet restore ./examples/SenseDesktop
