--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ before_install:
 script:
   - dotnet --info
   - dotnet restore ./examples/SenseDesktop
-  - dotnet build ./examples/SenseDesktop
+  - dotnet build -p:noGitVersionTask=1 ./examples/SenseDesktop
   - dotnet run /home/travis/build/q2g/enigma.net/examples/SenseDesktop/bin/Debug/netcoreapp2.1/SenseDesktop.dll
