--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ script:
   - dotnet --info
   - dotnet restore ./examples/SenseDesktop
   - dotnet build -p:noGitVersionTask=1 ./examples/SenseDesktop
+  - cd /home/travis/build/q2g/enigma.net/examples/SenseDesktop/bin/Debug/netcoreapp2.1/
+  - ls -a
   - dotnet run /home/travis/build/q2g/enigma.net/examples/SenseDesktop/bin/Debug/netcoreapp2.1/SenseDesktop.dll
