--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ script:
   - dotnet build -p:noGitVersionTask=1 ./examples/SenseDesktop
   - cd /home/travis/build/q2g/enigma.net/examples/SenseDesktop/bin/Debug/netcoreapp2.1/
   - ls -a
-  - dotnet run /home/travis/build/q2g/enigma.net/examples/SenseDesktop/bin/Debug/netcoreapp2.1/SenseDesktop.dll
+  - dotnet /home/travis/build/q2g/enigma.net/examples/SenseDesktop/bin/Debug/netcoreapp2.1/SenseDesktop.dll
