--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ script:
   - cd ./tests
   - dotnet restore
   - dotnet build -p:noGitVersionTask=1
-  - dotnet test
+  - dotnet test -p:noGitVersionTask=1
