--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,9 @@
     "extends": [
       "config:base"
     ],
+    "travis": {
+       "enabled": true
+    }
     "schedule": "before 10am",
     "timezone": "Europe/Berlin"
 }
