--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,33 +1,68 @@
-# .NET Desktop
-# Build and run tests for .NET Desktop or Windows classic desktop solutions.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
-
 trigger:
 - master
 
-pool:
-  vmImage: 'VS2017-Win2016'
+jobs:
+- job: Linux
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
+  - script: echo hello from Linux
+- job: macOS
+  pool:
+    vmImage: 'macOS-10.13'
+  steps:
+  - script: echo hello from macOS
 
-variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
+# Provide a name for the job
+#- job: Linux
 
-steps:
-- task: NuGetToolInstaller@0
+  # The VM image to use for the hosted agent. For a list of possible agents
+  # see https://docs.microsoft.com/en-us/azure/devops/pipelines/agents/hosted
+  # You can see the software installed on each agent at the same link.
+#  pool:
+#    vmImage: 'ubuntu-16.04'
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
+  # The steps to run to execute the build. I'm using
+  # Cake, and so I execute a bash script on Linx and macOS
+#  steps:
+#  - bash: ./build.sh
+    # You can set environment variables for the build. These
+    # aren't really necessary, but they're here as an example
+#    env:
+#      COREHOST_TRACE: 0
+#      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+#      DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+# Run a build on macOS at the same time
+#- job: macOS
+#  pool:
+#    vmImage: 'xcode9-macos10.13'
+#  steps:
+#  - bash: ./build.sh
+#    env:
+#      COREHOST_TRACE: 0
+#      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+#      DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+# Run a build on Windows at the same time
+- job: Windows
+  pool:
+    vmImage: 'vs2017-win2016'
+
+  steps:
+    - task: NuGetToolInstaller@0
+
+    - task: NuGetCommand@2
+      inputs:
+      restoreSolution: '$(solution)'
+
+    - task: VSBuild@1
+      inputs:
+        solution: '$(solution)'
+        platform: '$(buildPlatform)'
+        configuration: '$(buildConfiguration)'
+
+    - task: VSTest@2
+      inputs:
+        platform: '$(buildPlatform)'
+        configuration: '$(buildConfiguration)'
