Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,15 +54,28 @@ jobs:
 
     - task: NuGetCommand@2
       inputs:
-        restoreSolution: '$(solution)'
+        restoreSolution: 'tests/test.sl'
 
     - task: VSBuild@1
       inputs:
-        solution: '$(solution)'
-        platform: '$(buildPlatform)'
-        configuration: '$(buildConfiguration)'
+        solution: 'tests/test.sln'
+        #platform: ''
+        configuration: 'Debug'
 
-    - task: VSTest@2
-      inputs:
-        platform: '$(buildPlatform)'
-        configuration: '$(buildConfiguration)'
+    #solution: '**\*.sln' 
+    #vsVersion: 'latest' # Optional. Options: latest, 16.0, 15.0, 14.0, 12.0, 11.0
+    #msbuildArgs: # Optional
+    #platform: # Optional
+    #configuration: # Optional
+    #clean: false # Optional
+    #maximumCpuCount: false # Optional
+    #restoreNugetPackages: false # Optional
+    #msbuildArchitecture: 'x86' # Optional. Options: x86, x64
+    #logProjectEvents: true # Optional
+    #createLogFile: false # Optional
+    #logFileVerbosity: 'normal' # Optional. Options: quiet, minimal, normal, detailed, diagnostic
+
+#    - task: VSTest@2
+#      inputs:
+#        platform: '$(buildPlatform)'
+#        configuration: '$(buildConfiguration)'
