--- a/src/enigma.net.csproj
+++ b/src/enigma.net.csproj
@@ -7,7 +7,7 @@
 		</When>
 		<Otherwise>
 			<PropertyGroup>
-				<TargetFrameworks>net452;netcoreapp2.1;netcoreapp2.0</TargetFrameworks>
+				<TargetFrameworks>net452;netcoreapp2.2;netcoreapp2.1;netcoreapp2.0</TargetFrameworks>
 			</PropertyGroup>
 		</Otherwise>
 	</Choose>
