Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ jobs:
 
     - task: NuGetCommand@2
       inputs:
-        restoreSolution: 'tests/test.sl'
+        restoreSolution: 'tests/test.sln'
 
     - task: VSBuild@1
       inputs:
