--- a/src/enigma.net.csproj
+++ b/src/enigma.net.csproj
@@ -3,6 +3,7 @@
 		<When Condition="'$(MSBuildRuntimeType)' == 'Core'">
 			<PropertyGroup>
 				<TargetFramework>netcoreapp2.1</TargetFramework>
+				<RuntimeFrameworkVersion>2.1.5</RuntimeFrameworkVersion>
 			</PropertyGroup>
 		</When>
 		<Otherwise>
