--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,17 +55,19 @@ jobs:
          packageType: sdk
          version: 2.2.105
 
-    - task: NuGetToolInstaller@0
+#    - task: NuGetToolInstaller@0       
 
-    - task: NuGetCommand@2
-      inputs:
-        restoreSolution: 'tests/tests.sln'
+#    - task: NuGetCommand@2
+#      inputs:
+#       restoreSolution: 'tests/tests.sln'
 
-    - task: VSBuild@1
+
+    - task: MSBuild@1
       inputs:
         solution: 'tests/tests.sln'
         #platform: ''
         configuration: 'Debug'
+        restoreNugetPackages: true
 
     #solution: '**\*.sln' 
     #vsVersion: 'latest' # Optional. Options: latest, 16.0, 15.0, 14.0, 12.0, 11.0
