--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -12,6 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Update="Microsoft.NETCore.App" Version="2.1.0" />
 		<PackageReference Include="ImpromptuInterface" Version="7.0.1" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.0-preview-20181205-02" />
 		<PackageReference Include="qlik-engineapi" Version="0.3.0-alpha0015" />
