--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.1</TargetFramework>		
+		<TargetFramework>netcoreapp2.1</TargetFramework>
+		<RuntimeFrameworkVersion>2.1.5</RuntimeFrameworkVersion>
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
 	</PropertyGroup>
@@ -21,5 +22,4 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
-
 </Project>
