Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,8 +64,11 @@ jobs:
 #    - task: DotNetCoreCLI@2
 #      inputs:
 #        command: 'restore'
-
-    - script: dotnet restore --configuration Debug 
+    - task: CmdLine@2
+      inputs:
+        script:
+          cd tests
+          dotnet restore
 
     - task: MSBuild@1
       inputs:
