Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,9 +64,9 @@ jobs:
 #    - task: DotNetCoreCLI@2
 #      inputs:
 #        command: 'restore'
-    - task: CmdLine@2
+    - task: CmdLine@2      
       inputs:
-        script:
+        script: |
           cd tests
           dotnet restore
 
