--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,4 +38,4 @@ jobs:
       inputs:
         command: build
         projects: '**/*tests/*.csproj'
-        arguments: '--configuration $(buildConfiguration)
+        arguments: '--configuration $(buildConfiguration)'
