--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,7 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run a one-line script
-      run: echo Hello, world!
+      run: 
+        echo Hello, world!
+        cd tests
+        docker-compose up
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
