update docker-compose to detached mode

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Run a one-line script
       run: |
         cd tests
-        docker-compose up
+        docker-compose up -d
         dotnet restore
         dotnet test
         docker-compose down
